# study

./: .gitignore
Language/c/llama.cpp/: main.md
Language/cuda/: main.md  xmake.lua
Language/cuda/src/: test.cu
Language/opencl/: mian.md  xmake.lua
Language/opencl/src/: main.c
Language/rust/: main.md
Language/rust/tools/: mian.md
Language/rust/tools/axum/: Cargo.toml  main.md
Language/rust/tools/axum/assets/: index.html
Language/rust/tools/axum/src/: main.rs  multipart_form.rs  sse.rs  stream_file.rs  templates.rs  validator.rs  websocket.rs
Language/rust/tools/axum/templates/: layout.jinja
Language/rust/tools/chrono/: main.md
Language/rust/tools/clap/: main.md
Language/rust/tools/criterion/: main.md
Language/rust/tools/my_kornia/: Cargo.toml
Language/rust/tools/my_plotters/: Cargo.toml
Language/rust/tools/my_plotters/src/: main.rs
Language/rust/tools/my_polars/: Cargo.toml  README.md
Language/rust/tools/my_polars/src/: main.rs
Language/rust/tools/my_rerun/: Cargo.toml  REMEAD.md
Language/rust/tools/my_rerun/my_log/: Cargo.toml
Language/rust/tools/my_rerun/my_log/src/: main.rs
Language/rust/tools/my_rerun/src/: main.rs
Language/rust/tools/my_tokio/: Cargo.toml  main.md
Language/rust/tools/my_tokio/src/: lib.rs
Language/rust/tools/my_wgpu/: Cargo.toml  README.md
Language/rust/tools/my_wgpu/hello/: Cargo.toml
Language/rust/tools/my_wgpu/surface/: Cargo.toml
Language/rust/tools/my_wgpu/surface/src/: main.rs
Language/rust/tools/mysimd/: Cargo.toml  README.md
Language/rust/tools/mysimd/.cargo/: config.toml
Language/rust/tools/mysimd/src/: lib.rs  x86_x64.rs
Language/rust/tools/pyo3-example/: Cargo.toml  README.md  pyproject.toml
Language/rust/tools/pyo3-example/src/: lib.rs
Language/rust/tools/rand/: main.md
Language/rust/tools/simd/: Cargo.toml  README.md  build.rs
Language/rust/tools/simd/.cargo/: config.toml
Language/rust/tools/simd/benches/: benchmark.rs
Language/rust/tools/simd/cxx/: main.cpp  main.s  xmake.lua
Language/rust/tools/simd/src/: lib.rs  x86_64.rs
Language/rust/tools/tarpaulin/: main.md
Language/rust/tools/xtask/: Cargo.toml  main.md
Language/rust/tools/xtask/.cargo/: config.toml
Language/rust/tools/xtask/xtask/src/: main.rs
Language/triton/: 01-vector-add.ipynb  02-fused-softmax.ipynb  03-matrix-multiplication.ipynb
ai/InfiniLM/: REAMME.md
ai/falsh-attention/: bench.py  flash.cu  flash2.cu  main.cpp
ai/llama.cpp/: main.md
ai/my_candle/: Cargo.toml
ai/my_candle/src/: lib.rs  qwen.rs
ai/nano-vllm/: mian.md
tools/zed/: main.md
