[package]
name = "my_candle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
candle-transformers = "0.9"
candle-nn = "0.9"
tracing = "0.1"
tracing-chrome = "0.7"
tracing-subscriber = "0.3"
candle-core = "0.9"
tokenizers = { version = "0.21", default-features = false, features = ["onig"]}
hf-hub = { version = "0.4", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_plain = "1"
serde_json = "1"
