[workspace]
resolver = "3"
members = ["my_log"]
# exclude = ["code/showcase/imgui-demo", "code/showcase/pong"]


[workspace.package]
edition = "2024"

[workspace.dependencies]
rerun = { version = "0.24.0", features = ["clap"] }
rand = "0.9"
itertools = "0.14"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
