[workspace]
resolver = "3"
members = ["hello","surface"]
# exclude = ["code/showcase/imgui-demo", "code/showcase/pong"]


[workspace.package]
edition = "2024"

[workspace.dependencies]
pollster = "0.4"
cfg-if = "1"
env_logger = "0.11"
log = "0.4"
parking_lot = "0.12"
winit ={ version = "0.30" }
wgpu = "26"
web-time = "1.1.0"
